Bug 42281 - Doesn't advertise ContactBlocking when supported
Summary: Doesn't advertise ContactBlocking when supported
Status: RESOLVED FIXED
Alias: None
Product: Telepathy
Classification: Unclassified
Component: gabble (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Telepathy bugs list
QA Contact: Telepathy bugs list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-26 06:49 UTC by Guillaume Desmottes
Modified: 2011-10-28 06:39 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Advertise ContactBlocking if supported (2.47 KB, patch)
2011-10-26 06:57 UTC, Guillaume Desmottes
Details | Splinter Review
Advertise ContactBlocking if supported (2.85 KB, patch)
2011-10-26 07:04 UTC, Guillaume Desmottes
Details | Splinter Review
Advertise ContactBlocking if supported (2.41 KB, patch)
2011-10-26 07:22 UTC, Guillaume Desmottes
Details | Splinter Review
actually implement ContactBlocking interface (2.80 KB, patch)
2011-10-26 07:22 UTC, Guillaume Desmottes
Details | Splinter Review

Description Guillaume Desmottes 2011-10-26 06:49:36 UTC
When contact blocking is supported, Interface.ContactBlocking should be advertisted as a supported interface.
Comment 1 Guillaume Desmottes 2011-10-26 06:57:42 UTC
Created attachment 52797 [details] [review]
Advertise ContactBlocking if supported
Comment 2 Will Thompson 2011-10-26 07:01:18 UTC
Comment on attachment 52797 [details] [review]
Advertise ContactBlocking if supported

Review of attachment 52797 [details] [review]:
-----------------------------------------------------------------

Functionally, looks fine.

::: src/connection.c
@@ +2819,5 @@
> +    {
> +       const gchar *ifaces[] =
> +         { TP_IFACE_CONNECTION_INTERFACE_CONTACT_BLOCKING, NULL };
> +
> +      tp_base_connection_add_interfaces ((TpBaseConnection *) conn, ifaces);

Something is funky with the indentation here. The declaration of 'ifaces' is one space further in than the function call.

::: tests/twisted/roster/test-google-roster.py
@@ +296,5 @@
>          )
>  
> +    assertContains(cs.CONN_IFACE_CONTACT_BLOCKING,
> +                  conn.Get(cs.CONN, "Interfaces",
> +                           dbus_interface=cs.PROPERTIES_IFACE))

conn.Properties.Get(cs.CONN, "Interfaces")
Comment 3 Guillaume Desmottes 2011-10-26 07:04:04 UTC
Created attachment 52798 [details] [review]
Advertise ContactBlocking if supported
Comment 4 Guillaume Desmottes 2011-10-26 07:22:09 UTC
Created attachment 52799 [details] [review]
Advertise ContactBlocking if supported
Comment 5 Guillaume Desmottes 2011-10-26 07:22:19 UTC
Created attachment 52800 [details] [review]
actually implement ContactBlocking interface
Comment 6 Guillaume Desmottes 2011-10-26 07:31:19 UTC
Merged to master; will be in 0.13.8.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.