Advertise ContactBlocking if supported

https://bugs.freedesktop.org/show_bug.cgi?id=42281